--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
 <h1>What constitutes a creative web project today?</h1>
 <p> What constitutes a creative web project is a visually appealing and unique website combining colors and typography. </p>
 
-<h2>How do each of you wish to employ the web or the internet as a creative platform? </h2>
-<p> I wish to employ the web or the internet as a creative platform by being able to distribute information to large numbers of people in a short amount of time. </p>
+<h1>How do each of you wish to employ the web or the internet as a creative platform? </h1>
+<p> I wish to employ the web or the internet as a creative platform by being able to distribute information to large numbers of people in a short amount of time.</p>
 
-<h3>What are your goals in this course?
-</h3>
-<p> 	My goals in this course is to be able to sufficiently create an efficient and interesting websites with easy access. </p>
+<h1>What are your goals in this course?</h1>
+<p> 	My goals in this course is to be able to sufficiently create an efficient and interesting websites with easy access.</p>
 
 
 </body>
